--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            buildConfigField "String", "BASE_URL", '"http://api.mediastack.com/"'
+            buildConfigField "String", "BASE_URL", '"https://newsapi.org/"'
         }
         debug {
-            buildConfigField "String", "BASE_URL", '"http://api.mediastack.com/"'
+            buildConfigField "String", "BASE_URL", '"https://newsapi.org/"'
         }
     }
     compileOptions {
